--- a/src/Components/Footer/FooterData.css
+++ b/src/Components/Footer/FooterData.css
@@ -1,10 +1,13 @@
 .main{
-    padding:0 3rem;
+    padding:2rem 3rem;
     display:flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    /* border:2px solid black; */
+    /* box-shadow: 2px red; */
 }
 .imageee{
     border-radius: 50%;
+    margin:2rem;
 }
