--- a/src/Components/Tickets/Tickets.css
+++ b/src/Components/Tickets/Tickets.css
@@ -67,6 +67,10 @@ input[type="radio"] {
       font-size:0.7rem;
       /* align-items: space-around; */
     }
+    h1:hover{
+      color:#F96666;
+      font-size:0.9rem;
+    }
   }
   @media screen and (max-width: 450px) {
     .component3 {
@@ -77,7 +81,11 @@ input[type="radio"] {
   }
   @media screen and (max-width:350px){
     .compp2{
-      font-size:0.6rem;
+      font-size:0.7rem;
       align-items: space-around;
+    }
+    h1:hover{
+      color:#F96666;
+      font-size:0.8rem;
     }
   }
